kubernetes/consul/consul-service.yml
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: consul
spec:
  selector:
    app: consul
  ports:
    - protocol: TCP
      port: 8500
      targetPort: 8500
